; ModuleID = '/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_url_set_ccsid.c'
source_filename = "/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_url_set_ccsid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASCII_CCSID = common dso_local global i32 0, align 4
@CURLUE_OUT_OF_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @curl_url_set_ccsid(i32* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i8* null, i8** %12, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %26

16:                                               ; preds = %5
  %17 = load i32, i32* @ASCII_CCSID, align 4
  %18 = load i8*, i8** %9, align 8
  %19 = load i32, i32* %11, align 4
  %20 = call i8* @dynconvert(i32 %17, i8* %18, i32 -1, i32 %19)
  store i8* %20, i8** %12, align 8
  %21 = load i8*, i8** %12, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %25, label %23

23:                                               ; preds = %16
  %24 = load i32, i32* @CURLUE_OUT_OF_MEMORY, align 4
  store i32 %24, i32* %6, align 4
  br label %39

25:                                               ; preds = %16
  br label %26

26:                                               ; preds = %25, %5
  %27 = load i32*, i32** %7, align 8
  %28 = load i32, i32* %8, align 4
  %29 = load i8*, i8** %12, align 8
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @curl_url_set(i32* %27, i32 %28, i8* %29, i32 %30)
  store i32 %31, i32* %13, align 4
  %32 = load i8*, i8** %12, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %37

34:                                               ; preds = %26
  %35 = load i8*, i8** %12, align 8
  %36 = call i32 @free(i8* %35)
  br label %37

37:                                               ; preds = %34, %26
  %38 = load i32, i32* %13, align 4
  store i32 %38, i32* %6, align 4
  br label %39

39:                                               ; preds = %37, %23
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i8* @dynconvert(i32, i8*, i32, i32) #1

declare dso_local i32 @curl_url_set(i32*, i32, i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
